--- a/secrets.env
+++ b/secrets.env
@@ -11,7 +11,9 @@ APACHE_RUN_DIR=/var/run/apache2
 APACHE_LOCK_DIR=/var/lock/apache2
 
 #MySQL environment variables
-MYSQL_ROOT_PASSWORD=notatrivialone
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=modifyme
+MYSQL_DATABASE=cqpweb_db
+MYSQL_PASSWORD=password
+
+#CQPweb variables
+CQPWEB_ADMIN=admin
