--- a/CQPweb/Dockerfile
+++ b/CQPweb/Dockerfile
@@ -1,17 +1,16 @@
 ##############################################################################
 # Dockerfile for CQPweb
 #
-# Use a multi-stage build:
+# Use a single-stage build:
+#  - based on rocket-org R-base docker
 #  - download and build cwb
 #  - install CQPweb dependencies incl. cwb
 ##############################################################################
 
 
 ##############################################################################
-### Build cwb
 ###
-FROM debian:stretch-slim
-LABEL maintainer="egon w. stemle <egon.stemle@eurac.edu>"
+FROM r-base:latest
 LABEL maintainer="Luigi <luigi@rahona.be"
 ENV LANG C.UTF-8
 ARG CWB_REVISION=HEAD
@@ -38,7 +37,7 @@ RUN grep -E '^VERSION = ' cwb/definitions.mk | cut -c11- > cwb.version
 # http://svn.code.sf.net/p/cwb/code/cwb/trunk/install-scripts/cwb-install-ubuntu
 RUN apt-get update \
     && apt-get install \
-        autoconf bison flex gcc make pkg-config libc6-dev libncurses5 libncurses5-dev libpcre3-dev libglib2.0-0 libglib2.0-dev libreadline-dev perl-modules-5.24 libhtml-parser-perl
+        autoconf bison flex gcc make pkg-config libc6-dev libncurses5 libncurses5-dev libpcre3-dev libglib2.0-0 libglib2.0-dev libreadline-dev perl-modules libhtml-parser-perl
 
 WORKDIR /usr/local/src/cwb
 ENV PLATFORM=linux-64
@@ -52,29 +51,35 @@ RUN make clean \
     && make realclean
 
 #Install dependencies for cwb
-#Cwb-perl
-
-#Compile cwb-perl
+#Compile perl modules
 #Following http://svn.code.sf.net/p/cwb/code/perl/trunk/CWB-CL/README
 WORKDIR /usr/local/src
 RUN svn co http://svn.code.sf.net/p/cwb/code/perl/trunk/ cwb-perl
+#CWB/PERL
 WORKDIR /usr/local/src/cwb-perl/CWB
 RUN perl Makefile.PL \
     && make \
     && make test \
     && make install
 
-
 # Install generic dependencies for web app
 # 1) the ones that come with apt-get
 RUN apt-get update \
     && apt-get install \
         apache2 \
-        libapache2-mod-php7.0 \
+        libapache2-mod-php \
         libxml-libxml-perl \
-        php7.0-xml \
-	less
+        php-xml \
+	php-mysqli \
+	php-mbstring \
+	php-json \
+	php-gd \
+	less \
+	mysql-client
 
+#Install CQPweb
+WORKDIR /usr/local/src
+RUN svn co http://svn.code.sf.net/p/cwb/code/gui/cqpweb/trunk/ CQPweb
 
 # Tiny helper to start apache2 in foreground
 COPY starter /usr/local/bin/
