Removed Perl environment (no longer necessary)

--- a/CQPweb/Dockerfile
+++ b/CQPweb/Dockerfile
@@ -37,7 +37,7 @@ RUN grep -E '^VERSION = ' cwb/definitions.mk | cut -c11- > cwb.version
 # http://svn.code.sf.net/p/cwb/code/cwb/trunk/install-scripts/cwb-install-ubuntu
 RUN apt-get update \
     && apt-get install \
-        autoconf bison flex gcc make pkg-config libc6-dev libncurses5 libncurses5-dev libpcre3-dev libglib2.0-0 libglib2.0-dev libreadline-dev perl-modules libhtml-parser-perl
+        autoconf bison flex gcc make pkg-config libc6-dev libncurses5 libncurses5-dev libpcre3-dev libglib2.0-0 libglib2.0-dev libreadline-dev
 
 WORKDIR /usr/local/src/cwb
 ENV PLATFORM=linux-64
@@ -50,17 +50,6 @@ RUN make clean \
     && make install \
     && make realclean
 
-#Install dependencies for cwb
-#Compile perl modules
-#Following http://svn.code.sf.net/p/cwb/code/perl/trunk/CWB-CL/README
-WORKDIR /usr/local/src
-RUN svn co http://svn.code.sf.net/p/cwb/code/perl/trunk/ cwb-perl
-#CWB/PERL
-WORKDIR /usr/local/src/cwb-perl/CWB
-RUN perl Makefile.PL \
-    && make \
-    && make test \
-    && make install
 
 # Install generic dependencies for web app
 # 1) the ones that come with apt-get
@@ -68,7 +57,6 @@ RUN apt-get update \
     && apt-get install \
         apache2 \
         libapache2-mod-php \
-        libxml-libxml-perl \
         php-xml \
 	php-mysqli \
 	php-mbstring \
