--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@
 
 #CQP machine information
 #for instance myfirstmaster, mysecondsatellite
-FIRSTNAME=testing
+FIRSTNAME=mini-ciep
 #GUESS WHAT
 DOMAINNAME=rahona.be
 
+#The two most important directories in this system
+CORPORA=/var/corpora
+REGISTRY=/usr/local/share/cwb/registry
