--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,15 @@ services:
    domainname: ${DOMAINNAME}
    hostname: ${FIRSTNAME}-CQPweb
    build: 
-      context: ./cqpweb
+      context: ./CQPweb
    ports:
-       - 80:80
+       - 8080:80
    volumes:
-       - ./${FIRSTNAME}-container/cwb/corpora:/var/corpora
-       - ./${FIRSTNAME}-container/cwb/registry:/usr/local/share/cwb/registry
+       - ${CORPORA}:/var/corpora
+       - ${REGISTRY}:/usr/local/share/cwb/registry
        - ./${FIRSTNAME}-container/cqpweb/upload:/var/cqpweb/upload
        - ./${FIRSTNAME}-container/cqpweb/data:/var/www/html
-       - ./${FIRSTNAME}-container/cqpweb/tmp:/var/cqpweb/tmp
+       - ./${FIRSTNAME}-container/cqpwb/tmp:/var/cqpweb/tmp
   sql:
     image: mariadb
     env_file: ./secrets.env
