--- a/secrets.env
+++ b/secrets.env
@@ -1,6 +1,6 @@
 #Put your secrets here. 
 #Remember! Containers can only read this file, while settings in docker-compose.yaml are read by .env file
-LOCALTIME=Asia/Kabul
+LOCALTIME=Europe/Rome
 
 #Apache environment variables
 APACHE_RUN_USER=www-data
@@ -11,9 +11,9 @@ APACHE_RUN_DIR=/var/run/apache2
 APACHE_LOCK_DIR=/var/lock/apache2
 
 #MySQL environment variables
-MYSQL_ROOT_PASSWORD=modifyme
+MYSQL_ROOT_PASSWORD=gH9Cvd3d
 MYSQL_DATABASE=cqpweb_db
-MYSQL_PASSWORD=password
+MYSQL_PASSWORD=9JPhZDzp
 
 #CQPweb variables
 CQPWEB_ADMIN=admin
